# cpp-chatroom

./: .gitignore  CMakeLists.txt  LICENSE  README.md  project_structure.txt  update_tree.sh
app/: main.cpp
app/client/: client.cpp
app/server/: server.cpp
include/: ChatRoom.hpp  ChatRoomManager.hpp  MessageManager.hpp  User.hpp
include/message/: ImageMessage.hpp  Message.hpp  TextMessage.hpp  VideoMessage.hpp
src/: ChatRoom.cpp  MessageManager.cpp  User.cpp
src/message/: ImageMessage.cpp  Message.cpp  TextMessage.cpp  VideoMessage.cpp
